# IDcardOCR

./: .gitignore  LICENSE  readme.md
card_correction/cpp/: CMakeLists.txt  build_dll.bat  card_correction_dll.cpp  card_correction_dll.h  main.cpp  predictor.cpp  predictor.h  test_dll.cpp  utils.cpp  utils.h
idcard-ocr/: index.html  package-lock.json  package.json
idcard-ocr/src/: main.ts  styles.css
idcard-ocr/src-tauri/: Cargo.toml  tauri.conf.json
idcard-ocr/src-tauri/icons/: icon.icns
idcard-ocr/src-tauri/src/: correction.rs  correction_dll.rs  main.rs  ocr.rs
src-cpu/: README.md  ocr.py  requirements.txt
src-gpu/: README.md  ocr.py  recognized_id_info.xlsx  requirements.txt
